# support-ops-env

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  README.md  __init__.py  audit.py  before_after_prompt_injection.md  client.py  driftshield_colab.ipynb  driftshield_kaggle.ipynb  eval_compare.md  eval_compare.py  graders.py  inference.py  models.py  openenv.yaml  plot_rewards.py  pyproject.toml  support_ops_colab.ipynb  support_ops_colab_gemma4.ipynb  support_ops_kaggle.ipynb  tasks.py  train.py  train_gemma4.py
algofesast/: package.json
docs/: BENCHMARK_BRIEF.md  GLOSSARY.md  HUGGINGFACE_HUB.md  IMPLEMENTATION_CHECKLIST.md  driftshield_proof_reward_log.csv
kernels/driftshield-grpo/: README.md  driftshield_kaggle.ipynb  kernel-metadata.json
kernels/support-ops-grpo/: README.md  kernel-metadata.json  support_ops_kaggle.ipynb
openenv_support_ops.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: generate_proof_artifacts.py  push_kaggle_kernel.sh  validate-local.sh  validate-submission.sh
server/: app.py  driftshield_environment.py  support_ops_environment.py
tests/: conftest.py  test_api.py  test_driftshield.py  test_inference.py  test_reproducibility.py  test_support_ops_env.py  test_train.py
