[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-support-ops"
version = "0.1.0"
description = "OpenEnv support operations benchmark with deterministic graders"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openenv-core[core]>=0.2.3",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=4.1.0",
    "pytest>=8.2.0",
    "ruff>=0.11.0",
]
train = [
    "trl[vllm]>=0.29.0",
    "vllm>=0.11.0",
    "torch>=2.8.0,<2.10.0",
    "peft",
    "transformers",
    "datasets",
    "huggingface_hub>=0.20.0",
    "matplotlib",
    "numpy",
]
gemma = [
    "trl @ git+https://github.com/huggingface/trl.git",
    "transformers>=4.57.0",
    "accelerate>=0.30",
    "peft>=0.13.0",
    "bitsandbytes>=0.43.0",
    "datasets",
    "huggingface_hub>=0.20.0",
    "matplotlib",
    "numpy",
    "torch>=2.8.0,<2.10.0",
]

[project.scripts]
server = "server.app:main"

[tool.setuptools]
include-package-data = true
packages = ["support_ops_env", "support_ops_env.server"]
package-dir = { "support_ops_env" = ".", "support_ops_env.server" = "server" }

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
